@@ -6,6 +6,9 @@ Note: This file contains only changes in the 'default' branch.
 
 2018-01-23
 
+  - Removed the insertion of 'balance' metadata from the importer. We use it for
+    inserting Balance entries, not attach as metadata.
+
   - Disabled Balance insertion CSV test;
     03d9a5c3b2784a6f6a05c12eaeb7776f0478a96d broke the insertion of Balance
     entries without inserting 'balance' metadata. We'll probably have to revert the
